# starter-webassembly-ccrust-react

./: .gitignore  MODULE.bazel  README.md  WORKSPACE  index.html  package-lock.json  package.json  tailwind.config.js  tsconfig.json  vite.config.js
.devcontainer/: Dockerfile  devcontainer.json
demoapp/demo/: BUILD  demo_main.cc
dotenv/: .env.tauri:prod  .env.web:dev
node-scripts/: common-utils.mjs  copy-wasm.mjs
src/: App.css  App.tsx  RustWasmModule.ts  main.css  main.tsx
src-rustwasm/: Cargo.toml
src-rustwasm/src/: lib.rs
src-rustwasm/src/web/: mod.rs  studio_wrapper.rs
src-tauri/: .gitignore  Cargo.toml  tauri.conf.json
src/webassembly/: demo.wasm
src/webassembly/cppwasm/: demo.js
