[package]
name = "demo-logic"
version = "1.0.0"
authors = ["Avik Paul <avikpauldev@gmail.com>"]
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]

[features]
default = ["console_error_panic_hook"]

[dependencies]
lazy_static = "1.5.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
wasm-bindgen = "0.2.84"


# The `console_error_panic_hook` crate provides better debugging of panics by
# logging them with `console.error`. This is great for development, but requires
# all the `std::fmt` and `std::panicking` infrastructure, so isn't great for
# code size when deploying.
console_error_panic_hook = { version = "0.1.7", optional = true }
once_cell = "1.19.0"

[dev-dependencies]
wasm-bindgen-test = "0.3.34"

# Rust webassembly is used from Web worker. So do not add dependency to what is not
# applicable in worker context, e.g. Window, Document.
[dependencies.web-sys]
version = "0.3.4"
features = [
  'OffscreenCanvas',
  'OffscreenCanvasRenderingContext2d',
]

[profile.release]
# Tell `rustc` to optimize for small code size.
opt-level = "s"

[package.metadata.wasm-pack.profile.release]
# Further optimize the wasm binary generated after the Rust compiler has finished
wasm-opt = ['-O3']

[package.metadata.wasm-pack.profile.release.wasm-bindgen]
debug-js-glue = false
demangle-name-section = true
dwarf-debug-info = false
omit-default-module-path = false
